--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Inicio</h1>
-    <a href="src/pages/acerca.html"></a>
+    <a href="src/pages/acerca.html">Acerca</a>
 </body>
 </html>
