--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Inicio</h1>
     <a href="src/pages/acerca.html">Acerca</a>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcROOtv3TRF9fW_TYao8EtoYiPyBK3u7upYuMg&s" alt="">
 </body>
 </html>
